--- a/package.json
+++ b/package.json
@@ -1,7 +1,9 @@
 {
   "name": "wordcloud",
   "version": "0.0.0",
-  "dependencies": {},
+  "dependencies": {
+    "grunt-connect-pushstate": "~0.2.0"
+  },
   "devDependencies": {
     "grunt": "~0.4.1",
     "grunt-contrib-copy": "~0.5.0",
