--- a/bower.json
+++ b/bower.json
@@ -8,7 +8,9 @@
     "backbone": "~1.1.0",
     "requirejs": "~2.1.10",
     "requirejs-text": "~2.0.10",
-    "modernizr": "~2.7.1"
+    "modernizr": "~2.7.1",
+    "d3-cloud": "~1.0.5",
+    "d3": "~3.4.11"
   },
   "devDependencies": {
     "mocha": "*",
